# auth-service

./: .env  Cargo.toml  README.md  diesel.toml  docker-compose.yaml
.github/workflows/: main.yml
examples/svelte-web/: .gitignore  package.json
examples/svelte-web/src/: App.svelte
migrations/2021-05-12-094910_create_groups/: up.sql
migrations/2021-05-12-094926_create_permissions/: down.sql  up.sql
migrations/2021-05-12-094931_create_users/: up.sql
migrations/2021-05-12-094939_create_user_groups/: down.sql  up.sql
migrations/2021-05-27-115830_create_token/: down.sql  up.sql
src/: entity.rs  main.rs  permissions.rs  schema.rs
src/core/: endpoints.rs  mod.rs  request.rs  response.rs
src/core/internal_permissions/: mod.rs
src/models/: groups.rs  mod.rs  permissions.rs  schema.rs  seed.rs  tokens.rs  user_groups.rs  users.rs  uuid.rs
src/utils/: connection.rs
