[package]
name = "auth-service"
version = "0.1.0"
authors = ["PumpkinSeed <qwer.kocka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
diesel = { version = "1.4.4", features = ["postgres", "uuidv07"] } # uuidv07 refers to uuid crate's version 0.7
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"